// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditDisplayNameDialog /> renders correctly 1`] = `
<Modal
  isPrimaryDisabled={false}
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Edit"
  secondaryText="Cancel"
  title="Edit display name"
>
  <Form
    onSubmit={[Function]}
  >
    <FormGroup
      fieldId="edit-display-name-input"
      validated="default"
    >
      <ForwardRef
        aria-label="Edit display name"
        id="edit-display-name-input"
        onChange={[Function]}
        placeholder="Enter display name"
        type="text"
        validated="default"
        value=""
      />
    </FormGroup>
  </Form>
</Modal>
`;

exports[`<EditDisplayNameDialog /> renders correctly when an error occurs 1`] = `
<Modal
  isPrimaryDisabled={false}
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Edit"
  secondaryText="Cancel"
  title="Edit display name"
>
  <ErrorBox
    message="Error changing display name"
    response={
      Object {
        "error": true,
        "errorMessage": "this is an error",
      }
    }
  />
  <Form
    onSubmit={[Function]}
  >
    <FormGroup
      fieldId="edit-display-name-input"
      validated="default"
    >
      <ForwardRef
        aria-label="Edit display name"
        id="edit-display-name-input"
        onChange={[Function]}
        placeholder="Enter display name"
        type="text"
        validated="default"
        value="some-name"
      />
    </FormGroup>
  </Form>
</Modal>
`;

exports[`<EditDisplayNameDialog /> renders correctly when pending 1`] = `
<Modal
  isPending={true}
  isPrimaryDisabled={false}
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Edit"
  secondaryText="Cancel"
  title="Edit display name"
>
  <Form
    onSubmit={[Function]}
  >
    <FormGroup
      fieldId="edit-display-name-input"
      validated="default"
    >
      <ForwardRef
        aria-label="Edit display name"
        id="edit-display-name-input"
        onChange={[Function]}
        placeholder="Enter display name"
        type="text"
        validated="default"
        value="some-name"
      />
    </FormGroup>
  </Form>
</Modal>
`;
